test/1.2/errors/EERRSTMT_dml14.dml
/*
  © 2021-2022 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

method m_dml14() {
    if (false) {
        /// ERROR EERRSTMT
        error "xyz";
    }
    #if (false) {
        // no error
        error "xyz";
    }
    while (false) {
        /// ERROR EERRSTMT
        error;
    }
}
